<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.tees.p4072699.dogmapp.Sign_up">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Pass_sign"
        android:hint="@string/p_hint"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/email_sign"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Pass_con_sign"
        android:hint="@string/p_con_hint"
        android:layout_below="@+id/Pass_sign"
        android:layout_alignLeft="@+id/Pass_sign"
        android:layout_alignStart="@+id/Pass_sign"
        android:layout_marginTop="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress|textPersonName"
        android:ems="10"
        android:id="@+id/email_sign"
        android:hint="@string/e_hint"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/Pass_sign"
        android:layout_alignStart="@+id/Pass_sign" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Sign_Up_btn_sign"
        android:layout_below="@+id/Pass_con_sign"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="80dp" />

    <Button
        android:text="@string/Log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Sign_Up_btn_sign"
        android:layout_marginTop="34dp"
        android:id="@+id/Log_in_btn_sign"
        android:visibility="visible" />

</RelativeLayout>
