<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_dog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.tees.p4072699.dogmapp.AddDogActivity"
    android:background="@drawable/mappground">

    <TextView
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

    <EditText
        android:id="@+id/editText_dgname"
        android:layout_width="550px"
        android:layout_height="100px"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:background="@drawable/loginback"
        android:ems="10"
        android:hint="@string/dogname"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="120dp"
        android:layout_height="100px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button"
        android:text="@string/save" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="120dp"
        android:layout_height="100px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"
        android:text="@string/cancel" />

    <ImageButton
        android:id="@+id/imageButton_settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:elevation="1dp"
        android:scaleType="fitCenter"
        app:srcCompat="@mipmap/ic_settings_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
