<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.tees.p4072699.dogmapp.Login"
    android:background="@drawable/mappground">

    <ImageView
        app:srcCompat="@drawable/purelogo"
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/Email_log"
        android:background="@drawable/loginback"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/Pass_log"
        android:layout_alignStart="@+id/Pass_log"
        android:layout_marginTop="30dp"
        android:hint="@string/e_hint"
        android:textAlignment="center" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Pass_log"
        android:hint="@string/p_hint"
        android:background="@drawable/loginback"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_below="@+id/Email_log"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/Log_in"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/Log_in_btn_log"
        android:background="@drawable/button"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/Pass_log"
        android:layout_alignLeft="@+id/Sign_up_btn_log"
        android:layout_alignStart="@+id/Sign_up_btn_log" />

    <Button
        android:text="@string/sign_up"
        android:layout_width="150dp"
        android:id="@+id/Sign_up_btn_log"
        android:background="@drawable/button"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Log_in_btn_log" />
</RelativeLayout>
