<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.tees.p4072699.dogmapp.EditProfile">

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView22"
        android:layout_alignEnd="@+id/textView22" />

    <Button
        android:text="@string/changePass"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:id="@+id/button_change"
        android:background="@drawable/button"
        android:layout_below="@+id/button_savez"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etEmail"
        android:background="@drawable/loginback"
        android:layout_below="@+id/textView22"
        android:layout_alignLeft="@+id/etname"
        android:layout_alignStart="@+id/etname"
        android:textAlignment="center" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etname"
        android:background="@drawable/loginback"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <TextView
        android:text="@string/e_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView22"
        android:layout_below="@+id/etname"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/save"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:id="@+id/button_savez"
        android:background="@drawable/button"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button_change"
        android:layout_alignStart="@+id/button_change" />
</RelativeLayout>
