<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_pass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.tees.p4072699.dogmapp.changePass">

    <TextView
        android:text="Please Enter your old password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView23" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView23"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:id="@+id/et_old_pass"
        android:hint="@string/oldPass" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/textView26"
        android:layout_alignLeft="@+id/et_old_pass"
        android:layout_alignStart="@+id/et_old_pass"
        android:layout_marginTop="33dp"
        android:id="@+id/et_new_pass"
        android:hint="@string/newPass" />

    <TextView
        android:text="Please confirm your new password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_new_pass"
        android:layout_alignRight="@+id/textView26"
        android:layout_alignEnd="@+id/textView26"
        android:layout_marginTop="34dp"
        android:id="@+id/textView27" />

    <Button
        android:text="@string/retur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_return"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_return"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_savez"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="Please Enter your new Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/textView26"
        android:layout_below="@+id/et_old_pass"
        android:layout_alignRight="@+id/textView23"
        android:layout_alignEnd="@+id/textView23" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="33dp"
        android:id="@+id/et_con_new_pass"
        android:hint="@string/conNewPass"
        android:textSize="18sp"
        android:layout_below="@+id/textView27"
        android:layout_alignLeft="@+id/textView27"
        android:layout_alignStart="@+id/textView27"
        android:layout_alignRight="@+id/et_new_pass"
        android:layout_alignEnd="@+id/et_new_pass" />

</RelativeLayout>
